Figured out workaround for saving results to impala (woo!)

--- a/Annotation Scripts/NBS Genes/nbs_genes.ipynb
+++ b/Annotation Scripts/NBS Genes/nbs_genes.ipynb
@@ -71,44 +71,31 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "The following query was run on impala to annotate variants with the ensemble genes table and return only variants with a kaviar frequency of less than .01: \n",
+      "First all trio variants were annotated with the ensemble genes table:   \n",
       "\n",
-      "\n",
-      "    WITH annot AS (\n",
-      "       SELECT bv.sample_id, bv.chr, bv.pos, bv.id, bv.ref, bv.alt, bv.qual, bv.filter, bv.gt,\n",
-      "         ens.chromosome, ens.feature, ens.start, ens.stop, ens.gene_name, ens.transcript_name\n",
-      "      FROM p7_platform.brady_variant bv\n",
-      "      LEFT JOIN public_hg19.ensembl_genes ens \n",
-      "          ON bv.chr = ens.chromosome\n",
-      "         AND (bv.pos BETWEEN ens.start and ens.stop)\n",
-      "    WHERE (bv.sample_id LIKE '%01' OR bv.sample_id LIKE '%02' OR bv.sample_id LIKE '%01')\n",
-      ")\n",
+      "         WITH ens AS (\n",
+      "             SELECT DISTINCT ens.feature, ens.gene_name, ens.transcript_name, ens.exon_id, ens.chromosome, ens.start, ens.stop\n",
+      "             FROM public_hg19.ensembl_genes ens \n",
+      "             )\n",
       "  \n",
-      "    SELECT annot.sample_id, annot.chr, annot.pos, annot.id as rs_id, annot.ref, annot.alt, annot.qual, \n",
-      "    annot.filter, annot.gt, annot.feature, annot.gene_name, annot.transcript_name, kav.alle_freq as kav_freq\n",
-      "    FROM annot \n",
-      "    LEFT JOIN /* +SHUFFLE */ public_hg19.kaviar kav\n",
-      "        ON annot.chr = kav.chromosome\n",
-      "        AND annot.pos = kav.pos\n",
-      "        AND annot.ref = kav.ref\n",
-      "        AND annot.alt = kav.alt\n",
-      "    WHERE (kav.alle_freq < .01 or kav.alle_freq IS NULL)\n",
+      "         SELECT bv.sample_id, bv.chr, bv.pos, bv.id, bv.ref, bv.alt, bv.qual, bv.filter, bv.gt, ens.*\n",
+      "          FROM p7_platform.brady_variant bv\n",
+      "          LEFT JOIN ens\n",
+      "              ON bv.chr = ens.chromosome\n",
+      "              AND (bv.pos BETWEEN ens.start and ens.stop)\n",
+      "          WHERE (bv.sample_id LIKE '%03' OR bv.sample_id LIKE '%02' OR bv.sample_id LIKE '%01')\n",
       "\n",
+      "Query Statements:   \n",
+      "- Queries were limited to trio members, excluding more distant relatives  \n",
       "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
+      "Results were saved to an hdfs table for further analysis. "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      ""
      ]
     }
    ]
