--- a/Annotation Scripts/NBS Genes/nbs_genes.ipynb
+++ b/Annotation Scripts/NBS Genes/nbs_genes.ipynb
@@ -64,32 +64,118 @@
      "metadata": {},
      "level": 2,
      "source": [
-      "Query"
+      "Reducing Input Variant Set"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "First all trio variants were annotated with the ensemble genes table:   \n",
+      "To reduce the number of variants input into downstream queries and analysis, all trio variants were annotated with kaviar frequencies to reduce the number of variants input into downstream analysis. \n",
       "\n",
-      "         WITH ens AS (\n",
-      "             SELECT DISTINCT ens.feature, ens.gene_name, ens.transcript_name, ens.exon_id, ens.chromosome, ens.start, ens.stop\n",
-      "             FROM public_hg19.ensembl_genes ens \n",
-      "             )\n",
+      "         WITH bv AS (\n",
+      "             SELECT bv.sample_id, bv.chr, bv.pos, bv.id, bv.ref, bv.alt, bv.qual, bv.filter, bv.gt\n",
+      "             FROM p7_platform.brady_variant bv\n",
+      "             WHERE (bv.sample_id LIKE '%03' OR bv.sample_id LIKE '%02' OR bv.sample_id LIKE '%01')\n",
+      "          )\n",
       "  \n",
-      "         SELECT bv.sample_id, bv.chr, bv.pos, bv.id, bv.ref, bv.alt, bv.qual, bv.filter, bv.gt, ens.*\n",
-      "          FROM p7_platform.brady_variant bv\n",
-      "          LEFT JOIN ens\n",
-      "              ON bv.chr = ens.chromosome\n",
-      "              AND (bv.pos BETWEEN ens.start and ens.stop)\n",
-      "          WHERE (bv.sample_id LIKE '%03' OR bv.sample_id LIKE '%02' OR bv.sample_id LIKE '%01')\n",
+      "          SELECT bv.*, k.alle_freq\n",
+      "          FROM bv\n",
+      "          LEFT JOIN /* +SHUFFLE */ public_hg19.kaviar k\n",
+      "               ON bv.chr = k.chromosome\n",
+      "               AND bv.pos = k.pos\n",
+      "               AND bv.ref = k.ref\n",
+      "               AND bv.alt = k.alt\n",
+      "         WHERE (k.alle_freq < .01 OR k.alle_freq IS NULL)\n",
       "\n",
       "Query Statements:   \n",
       "- Queries were limited to trio members, excluding more distant relatives  \n",
+      "- Keep only variants with a kaviar frequency less than .01, or variants not listed in the kaviar table. \n",
       "\n",
-      "Results were saved to an hdfs table for further analysis. "
+      "Results were saved to an hdfs table named bv_kaviar. "
      ]
+    },
+    {
+     "cell_type": "heading",
+     "metadata": {},
+     "level": 2,
+     "source": [
+      "Annotating with ClinVar and Ensembl"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "After the initial set of variants was filtered by kaviar frequency, the variants will be annotated with ensembl so they can be matched by gene name with the nbs_gene list. \n",
+      "\n",
+      "The ensembl_genes table was subset for only distinct gene names, to avoid getting mulitple returns for every different transcript and exon for every gene. \n",
+      "\n",
+      "         WITH ens AS (\n",
+      "             SELECT DISTINCT ens.chromosome, ens.start, ens.stop, ens.gene_name, ens.feature\n",
+      "             FROM public_hg19.ensembl_genes ens\n",
+      "          )\n",
+      "\n",
+      "         SELECT bv.chr, bv.pos, bv.alt, bv.ref, bv.id as rs_id, bv.qual, bv.filter, bv.gt, bv.alle_freq as kav_freq, \n",
+      "         ens.feature, ens.gene_name\n",
+      "         FROM public_hg19.bv_kaviar bv\n",
+      "         LEFT JOIN ens\n",
+      "             ON bv.chr = ens.chromosome\n",
+      "            AND bv.pos BETWEEN ens.start and ens.stop"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [
+      {
+       "ename": "HiveServer2Error",
+       "evalue": "Cancelled",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+        "\u001b[0;31mHiveServer2Error\u001b[0m                          Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-4-fe54a97ff25a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m#save to pandas table\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mens_annots\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mas_pandas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcur\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mens_annots\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/Users/selasady/anaconda/lib/python2.7/site-packages/impala/util.pyc\u001b[0m in \u001b[0;36mas_pandas\u001b[0;34m(cursor)\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;32mfrom\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0mnames\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mmetadata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mmetadata\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdescription\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_records\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/Users/selasady/anaconda/lib/python2.7/site-packages/impala/dbapi/hiveserver2.pyc\u001b[0m in \u001b[0;36mfetchall\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    233\u001b[0m         \u001b[0;31m# PEP 249\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    234\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 235\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    236\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    237\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/Users/selasady/anaconda/lib/python2.7/site-packages/impala/dbapi/hiveserver2.pyc\u001b[0m in \u001b[0;36mnext\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    259\u001b[0m             rows = rpc.fetch_results(self.service, self._last_operation_handle,\n\u001b[1;32m    260\u001b[0m                                      \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhs2_protocol_version\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 261\u001b[0;31m                                      self.description, self.buffersize)\n\u001b[0m\u001b[1;32m    262\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_buffer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    263\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_buffer\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/Users/selasady/anaconda/lib/python2.7/site-packages/impala/_rpc/hiveserver2.pyc\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    130\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mtransport\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misOpen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    131\u001b[0m                     \u001b[0mtransport\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 132\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    133\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    134\u001b[0m                 \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/Users/selasady/anaconda/lib/python2.7/site-packages/impala/_rpc/hiveserver2.pyc\u001b[0m in \u001b[0;36mfetch_results\u001b[0;34m(service, operation_handle, hs2_protocol_version, schema, max_rows, orientation)\u001b[0m\n\u001b[1;32m    275\u001b[0m                            maxRows=max_rows)\n\u001b[1;32m    276\u001b[0m     \u001b[0mresp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mservice\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFetchResults\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 277\u001b[0;31m     \u001b[0merr_if_rpc_not_ok\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    278\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    279\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mhs2_protocol_version\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mTProtocolVersion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHIVE_CLI_SERVICE_PROTOCOL_V6\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/Users/selasady/anaconda/lib/python2.7/site-packages/impala/_rpc/hiveserver2.pyc\u001b[0m in \u001b[0;36merr_if_rpc_not_ok\u001b[0;34m(resp)\u001b[0m\n\u001b[1;32m     78\u001b[0m             \u001b[0mresp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatusCode\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mTStatusCode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSUCCESS_WITH_INFO_STATUS\u001b[0m \u001b[0;32mand\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m             resp.status.statusCode != TStatusCode.STILL_EXECUTING_STATUS):\n\u001b[0;32m---> 80\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mHiveServer2Error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merrorMessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mHiveServer2Error\u001b[0m: Cancelled"
+       ]
+      }
+     ],
+     "input": [
+      "from impala.dbapi import connect\n",
+      "from impala.util import as_pandas\n",
+      "\n",
+      "# create connection to impala database\n",
+      "conn=connect(host='glados19', port=21050, database=\"public_hg19\")\n",
+      "\n",
+      "# create a cursor object to interact with the db\n",
+      "cur = conn.cursor()\n",
+      "\n",
+      "ens_query = \"WITH ens AS (SELECT DISTINCT ens.chromosome, ens.start, ens.stop, ens.gene_name, ens.feature \\\n",
+      "FROM public_hg19.ensembl_genes ens )\\\n",
+      "SELECT bv.sample_id, bv.chr, bv.pos, bv.alt, bv.ref, bv.id as rs_id, bv.qual, bv.filter, bv.gt, bv.alle_freq as kav_freq, \\\n",
+      "ens.feature, ens.gene_name \\\n",
+      "FROM public_hg19.bv_kaviar bv \\\n",
+      "LEFT JOIN ens \\\n",
+      "ON bv.chr = ens.chromosome \\\n",
+      "AND bv.pos BETWEEN ens.start and ens.stop\"\n",
+      "\n",
+      "#annotate variants with ensembl\n",
+      "cur.execute(ens_query)\n",
+      "\n",
+      "#save to pandas table\n",
+      "ens_annots = as_pandas(cur)\n",
+      "\n",
+      "print ens_annots.head(5)"
+     ],
+     "language": "python",
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
