--- a/Annotation Scripts/NBS Genes/nbs_genes.ipynb
+++ b/Annotation Scripts/NBS Genes/nbs_genes.ipynb
@@ -107,9 +107,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "After the initial set of variants was filtered by kaviar frequency, the variants will be annotated with ensembl so they can be matched by gene name with the nbs_gene list. \n",
+      "After the initial set of variants was filtered by kaviar frequency, the variants were annotated with ensembl, returning only variants with ensembl entries for matching with nbs_gene list. \n",
       "\n",
-      "The ensembl_genes table was subset for only distinct gene names, to avoid getting mulitple returns for every different transcript and exon for every gene. \n",
+      "The ensembl_genes table was subset for only distinct gene names, to avoid duplicated results for every different transcript and exon of each gene. \n",
       "\n",
       "         WITH ens AS (\n",
       "             SELECT DISTINCT ens.chromosome, ens.start, ens.stop, ens.gene_name, ens.feature\n",
@@ -118,10 +118,9 @@
       "\n",
       "         SELECT bv.chr, bv.pos, bv.alt, bv.ref, bv.id as rs_id, bv.qual, bv.filter, bv.gt, bv.alle_freq as kav_freq, \n",
       "         ens.feature, ens.gene_name\n",
-      "         FROM public_hg19.bv_kaviar bv\n",
-      "         LEFT JOIN ens\n",
-      "             ON bv.chr = ens.chromosome\n",
-      "            AND bv.pos BETWEEN ens.start and ens.stop"
+      "         FROM public_hg19.bv_kaviar bv, ens\n",
+      "         WHERE bv.chr = ens.chromosome\n",
+      "         AND bv.pos BETWEEN ens.start and ens.stop"
      ]
     },
     {
@@ -130,20 +129,10 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "HiveServer2Error",
-       "evalue": "Cancelled",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-        "\u001b[0;31mHiveServer2Error\u001b[0m                          Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-4-fe54a97ff25a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;31m#save to pandas table\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0mens_annots\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mas_pandas\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcur\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mens_annots\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Users/selasady/anaconda/lib/python2.7/site-packages/impala/util.pyc\u001b[0m in \u001b[0;36mas_pandas\u001b[0;34m(cursor)\u001b[0m\n\u001b[1;32m     22\u001b[0m     \u001b[0;32mfrom\u001b[0m \u001b[0mpandas\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0mnames\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mmetadata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mmetadata\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdescription\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mDataFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_records\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcursor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetchall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolumns\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Users/selasady/anaconda/lib/python2.7/site-packages/impala/dbapi/hiveserver2.pyc\u001b[0m in \u001b[0;36mfetchall\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    233\u001b[0m         \u001b[0;31m# PEP 249\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    234\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 235\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    236\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    237\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Users/selasady/anaconda/lib/python2.7/site-packages/impala/dbapi/hiveserver2.pyc\u001b[0m in \u001b[0;36mnext\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    259\u001b[0m             rows = rpc.fetch_results(self.service, self._last_operation_handle,\n\u001b[1;32m    260\u001b[0m                                      \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhs2_protocol_version\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 261\u001b[0;31m                                      self.description, self.buffersize)\n\u001b[0m\u001b[1;32m    262\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_buffer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    263\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_buffer\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Users/selasady/anaconda/lib/python2.7/site-packages/impala/_rpc/hiveserver2.pyc\u001b[0m in \u001b[0;36mwrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    130\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mtransport\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misOpen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    131\u001b[0m                     \u001b[0mtransport\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 132\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    133\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    134\u001b[0m                 \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Users/selasady/anaconda/lib/python2.7/site-packages/impala/_rpc/hiveserver2.pyc\u001b[0m in \u001b[0;36mfetch_results\u001b[0;34m(service, operation_handle, hs2_protocol_version, schema, max_rows, orientation)\u001b[0m\n\u001b[1;32m    275\u001b[0m                            maxRows=max_rows)\n\u001b[1;32m    276\u001b[0m     \u001b[0mresp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mservice\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFetchResults\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 277\u001b[0;31m     \u001b[0merr_if_rpc_not_ok\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    278\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    279\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mhs2_protocol_version\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mTProtocolVersion\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHIVE_CLI_SERVICE_PROTOCOL_V6\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;32m/Users/selasady/anaconda/lib/python2.7/site-packages/impala/_rpc/hiveserver2.pyc\u001b[0m in \u001b[0;36merr_if_rpc_not_ok\u001b[0;34m(resp)\u001b[0m\n\u001b[1;32m     78\u001b[0m             \u001b[0mresp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatusCode\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mTStatusCode\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSUCCESS_WITH_INFO_STATUS\u001b[0m \u001b[0;32mand\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m             resp.status.statusCode != TStatusCode.STILL_EXECUTING_STATUS):\n\u001b[0;32m---> 80\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mHiveServer2Error\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merrorMessage\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     81\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     82\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mHiveServer2Error\u001b[0m: Cancelled"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "      sample_id chr      pos alt ref rs_id    qual  filter   gt  kav_freq  \\\n0  102-00932-01  11  9664235   G  GA  None  225.00    PASS  0/1  0.000059   \n1  102-00996-01  11  9664235   G  GA  None  274.00    PASS  0/1  0.000059   \n2  102-07005-01  11  9664235   G  GA  None  216.00    PASS  0/1  0.000059   \n3  102-01532-02  11  9664235   G  GA  None  295.00    PASS  0/1  0.000059   \n4  102-00979-03  11  9664235   G  GA  None  659.00  LowGQX  1/1  0.000059   \n\n  feature gene_name  \n0    None      None  \n1    None      None  \n2    None      None  \n3    None      None  \n4    None      None  \n"
        ]
       }
      ],
@@ -152,7 +141,7 @@
       "from impala.util import as_pandas\n",
       "\n",
       "# create connection to impala database\n",
-      "conn=connect(host='glados19', port=21050, database=\"public_hg19\")\n",
+      "conn=connect(host='glados19', port=21050)\n",
       "\n",
       "# create a cursor object to interact with the db\n",
       "cur = conn.cursor()\n",
@@ -161,9 +150,8 @@
       "FROM public_hg19.ensembl_genes ens )\\\n",
       "SELECT bv.sample_id, bv.chr, bv.pos, bv.alt, bv.ref, bv.id as rs_id, bv.qual, bv.filter, bv.gt, bv.alle_freq as kav_freq, \\\n",
       "ens.feature, ens.gene_name \\\n",
-      "FROM public_hg19.bv_kaviar bv \\\n",
-      "LEFT JOIN ens \\\n",
-      "ON bv.chr = ens.chromosome \\\n",
+      "FROM public_hg19.bv_kaviar bv, ens \n",
+      "WHERE bv.chr = ens.chromosome \\\n",
       "AND bv.pos BETWEEN ens.start and ens.stop\"\n",
       "\n",
       "#annotate variants with ensembl\n",
@@ -172,10 +160,29 @@
       "#save to pandas table\n",
       "ens_annots = as_pandas(cur)\n",
       "\n",
+      "#preview results to make sure all looks well\n",
       "print ens_annots.head(5)"
      ],
      "language": "python",
-     "prompt_number": 4
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "heading",
+     "metadata": {},
+     "level": 2,
+     "source": [
+      "Locate Variants in NBS Gene List"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "Now that the variants have gene annotations"
+     ],
+     "language": "python"
     },
     {
      "cell_type": "markdown",
