--- a/Annotation Scripts/NBS Genes/nbs_genes.ipynb
+++ b/Annotation Scripts/NBS Genes/nbs_genes.ipynb
@@ -71,7 +71,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "To reduce the number of variants input into downstream queries and analysis, all trio variants were annotated with kaviar frequencies to reduce the number of variants input into downstream analysis. \n",
+      "To reduce the number of variants input into downstream queries and analysis, all trio variants were annotated with kaviar frequencies, Keep only variants with a kaviar frequency less than .01, or variants not listed in the kaviar table.  \n",
       "\n",
       "         WITH bv AS (\n",
       "             SELECT bv.sample_id, bv.chr, bv.pos, bv.id, bv.ref, bv.alt, bv.qual, bv.filter, bv.gt\n",
@@ -100,71 +100,27 @@
      "metadata": {},
      "level": 2,
      "source": [
-      "Annotating with ClinVar and Ensembl"
+      "Annotating with Ensembl"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "After the initial set of variants was filtered by kaviar frequency, the variants were annotated with ensembl, returning only variants with ensembl entries for matching with nbs_gene list. \n",
+      "After the initial set of variants was filtered by kaviar frequency, the variants were annotated with ensembl, \n",
+      "returning only variants with ensembl entries, for matching with nbs_gene list. \n",
       "\n",
-      "The ensembl_genes table was subset for only distinct gene names, to avoid duplicated results for every different transcript and exon of each gene. \n",
+      "The ensembl_genes table was subset for only distinct gene names, to avoid duplicated results for every different \n",
+      "transcript and exon of each gene. \n",
       "\n",
-      "         WITH ens AS (\n",
-      "             SELECT DISTINCT ens.chromosome, ens.start, ens.stop, ens.gene_name, ens.feature\n",
-      "             FROM public_hg19.ensembl_genes ens\n",
-      "          )\n",
+      "        CREATE TABLE users_selasady.bv_ensembl AS SELECT DISTINCT bv.sample_id, bv.chr, bv.pos, bv.alt, bv.ref, \n",
+      "         bv.id as rs_id, bv.qual, bv.filter, bv.gt, bv.alle_freq as kav_freq, ens.gene_name, ens.gene_id, ens.feature\n",
+      "         FROM public_hg19.bv_kaviar bv, users_selasady.ensembl_condensed ens\n",
+      "         WHERE bv.chr = ens.chr\n",
+      "         AND bv.pos BETWEEN ens.start and ens.stop\n",
       "\n",
-      "         SELECT bv.chr, bv.pos, bv.alt, bv.ref, bv.id as rs_id, bv.qual, bv.filter, bv.gt, bv.alle_freq as kav_freq, \n",
-      "         ens.feature, ens.gene_name\n",
-      "         FROM public_hg19.bv_kaviar bv, ens\n",
-      "         WHERE bv.chr = ens.chromosome\n",
-      "         AND bv.pos BETWEEN ens.start and ens.stop"
+      "Results were saved to impala as bv_ens containing 778724 rows. "
      ]
-    },
-    {
-     "cell_type": "code",
-     "execution_count": null,
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "      sample_id chr      pos alt ref rs_id    qual  filter   gt  kav_freq  \\\n0  102-00932-01  11  9664235   G  GA  None  225.00    PASS  0/1  0.000059   \n1  102-00996-01  11  9664235   G  GA  None  274.00    PASS  0/1  0.000059   \n2  102-07005-01  11  9664235   G  GA  None  216.00    PASS  0/1  0.000059   \n3  102-01532-02  11  9664235   G  GA  None  295.00    PASS  0/1  0.000059   \n4  102-00979-03  11  9664235   G  GA  None  659.00  LowGQX  1/1  0.000059   \n\n  feature gene_name  \n0    None      None  \n1    None      None  \n2    None      None  \n3    None      None  \n4    None      None  \n"
-       ]
-      }
-     ],
-     "input": [
-      "from impala.dbapi import connect\n",
-      "from impala.util import as_pandas\n",
-      "\n",
-      "# create connection to impala database\n",
-      "conn=connect(host='glados19', port=21050)\n",
-      "\n",
-      "# create a cursor object to interact with the db\n",
-      "cur = conn.cursor()\n",
-      "\n",
-      "ens_query = \"WITH ens AS (SELECT DISTINCT ens.chromosome, ens.start, ens.stop, ens.gene_name, ens.feature \\\n",
-      "FROM public_hg19.ensembl_genes ens )\\\n",
-      "SELECT bv.sample_id, bv.chr, bv.pos, bv.alt, bv.ref, bv.id as rs_id, bv.qual, bv.filter, bv.gt, bv.alle_freq as kav_freq, \\\n",
-      "ens.feature, ens.gene_name \\\n",
-      "FROM public_hg19.bv_kaviar bv, ens \n",
-      "WHERE bv.chr = ens.chromosome \\\n",
-      "AND bv.pos BETWEEN ens.start and ens.stop\"\n",
-      "\n",
-      "#annotate variants with ensembl\n",
-      "cur.execute(ens_query)\n",
-      "\n",
-      "#save to pandas table\n",
-      "ens_annots = as_pandas(cur)\n",
-      "\n",
-      "#preview results to make sure all looks well\n",
-      "print ens_annots.head(5)"
-     ],
-     "language": "python",
-     "prompt_number": 5
     },
     {
      "cell_type": "heading",
@@ -175,12 +131,41 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Once the variants were annotated with the ensemble table, gene names were used to match variants to the nbs_genes table. \n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
      "cell_type": "code",
      "execution_count": null,
      "metadata": {},
      "outputs": [],
      "input": [
-      "Now that the variants have gene annotations"
+      ""
+     ],
+     "language": "python"
+    },
+    {
+     "cell_type": "code",
+     "execution_count": null,
+     "metadata": {},
+     "outputs": [],
+     "input": [
+      "from impala.dbapi import connect\n",
+      "from impala.util import as_pandas\n",
+      "\n",
+      "# create connection to impala database\n",
+      "conn=connect(host='glados19', port=21050)\n",
+      "\n",
+      "# create a cursor object to interact with the db\n",
+      "cur = conn.cursor()\n",
+      "\n",
+      "cur.close()"
      ],
      "language": "python"
     },
